feat: get notifications api
