# Backend/docs/swagger.json
@@ -19,6 +19,16 @@
                 "responses": {}
             }
         },
+        "/notification/user/created": {
+            "post": {
+                "responses": {}
+            }
+        },
+        "/notification/user/verified": {
+            "post": {
+                "responses": {}
+            }
+        },
         "/payment": {
             "get": {
                 "parameters": [
